--- a/TaskManager_redesign/SelectEmployee.xaml
+++ b/TaskManager_redesign/SelectEmployee.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         xmlns:e="http://schemas.microsoft.com/xaml/behaviors"
         Title="Выберите ответственного сотрудника" Height="450" Width="800"
-        DataContext="{Binding Source={StaticResource SelectEmployeeViewModel}}" WindowStartupLocation="CenterOwner">
+        DataContext="{Binding Source={StaticResource SelectEmployeeViewModel}}" WindowStartupLocation="CenterOwner" Closing="Window_Closing">
     <Window.Resources>
         <ResourceDictionary >
             <ResourceDictionary.MergedDictionaries>
